# TensorScript

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_elementwise.py  bench_memory.py  bench_mlp.py  bench_sweep.py  plot_results.py
bindings/: python.cpp
include/ts/: codegen.h  ir.h  jit.h  ops.h  passes.h  runtime.h
results/: bench_elementwise.json  bench_memory.json  bench_mlp.json  benchmark-report.html  benchmark_raw.json  ir_after_fusion.dot  ir_before_fusion.dot  kernel_scalar.ll  kernel_vectorized.ll
src/: codegen.cpp  ir.cpp  jit.cpp  ops.cpp  runtime.cpp
src/passes/: buffer_reuse.cpp  constant_fold.cpp  dce.cpp  fusion.cpp  matmul_epilogue.cpp  passes_runner.cpp  veclib_split.cpp
tests/: test_buffer_reuse.cpp  test_codegen.cpp  test_correctness.py  test_fusion.cpp  test_ir.cpp  test_matmul_epilogue.cpp
