[build-system]
requires = ["scikit-build-core>=0.6", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "tensorscript"
version = "0.1.0"
description = "A C++/LLVM ML compiler that outperforms NumPy on fused element-wise workloads"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.scikit-build]
cmake.args = [
    "-DCMAKE_BUILD_TYPE=Release",
]
cmake.targets = ["tensorscript"]
install.components = ["tensorscript"]
